--- a/functions/package.json
+++ b/functions/package.json
@@ -4,9 +4,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.0.0",
-    "firebase-functions": "^4.0.0",
-    "googleapis": "^105.0.0",
-    "node-fetch": "^2.6.7"
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.3.1"
+  },
+  "engines": {
+    "node": "20"
   }
 }
