--- a/functions/package.json
+++ b/functions/package.json
@@ -1,22 +1,12 @@
+
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "engines": {
-    "node": "20"
-  },
+  "name": "hosting-auto-deploy",
+  "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^6.0.0",
-    "googleapis": "^140.0.0",
-    "cors": "^2.8.5"
-  },
-  "private": true
+    "firebase-admin": "^11.0.0",
+    "firebase-functions": "^4.0.0",
+    "googleapis": "^105.0.0",
+    "node-fetch": "^2.6.7"
+  }
 }
