--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "firebase": "^11.3.1",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "11.11.17",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
