--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: # Permite apertar o play manualmente se precisar
+  workflow_dispatch:
 
 jobs:
   build_and_deploy:
@@ -17,15 +17,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-     - name: Instalar Dependências do Site
+
+      # AQUI ESTÁ A CORREÇÃO PRINCIPAL
+      - name: Instalar Dependências do Site
         run: npm install --legacy-peer-deps
 
       - name: Criar Versão Final (Build)
         run: npm run build
-        # Isso cria a pasta 'dist' que estava faltando
 
       - name: Instalar Dependências das Funções
-        run: cd functions && npm install
+        run: cd functions && npm install --legacy-peer-deps
 
       - name: Publicar no Firebase
         uses: w9jds/firebase-action@master
