--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "firebase": "^11.3.1",
-    "framer-motion": "11.11.17",
-    "lucide-react": "^0.475.0",
+"dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.475.0",
+    "firebase": "^11.3.1",
+    "@google/genai": "^0.1.1" 
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
