--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.475.0",
     "firebase": "^11.3.1",
-    "@google/genai": "^0.1.1" 
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
