--- a/functions/package.json
+++ b/functions/package.json
@@ -1,12 +1,11 @@
-
 {
-  "name": "hosting-auto-deploy",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "functions",
+  "engines": {
+    "node": "20"
+  },
   "dependencies": {
-    "firebase-admin": "^11.0.0",
-    "firebase-functions": "^4.0.0",
-    "googleapis": "^105.0.0",
-    "node-fetch": "^2.6.7"
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^6.0.0",
+    "google-auth-library": "^9.0.0"
   }
 }
