--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "sitecraft-saas",
   "private": true,
@@ -9,13 +8,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-"dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+  "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "firebase": "^11.3.1",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.475.0",
-    "firebase": "^11.3.1",
-    "@google/generative-ai": "^0.21.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
