--- a/functions/package.json
+++ b/functions/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^6.0.0",
+    "firebase-functions": "^7.0.5",
+    "firebase-tools": "^15.5.1",
     "google-auth-library": "^9.0.0"
   }
 }
