--- a/functions/package.json
+++ b/functions/package.json
@@ -4,9 +4,12 @@
     "node": "20"
   },
   "dependencies": {
-    "firebase-admin": "^12.0.0",
+    "@google/generative-ai": "^0.24.1",
+    "axios": "^1.13.5",
+    "firebase-admin": "^12.7.0",
     "firebase-functions": "^7.0.5",
     "firebase-tools": "^15.5.1",
-    "google-auth-library": "^9.0.0"
+    "google-auth-library": "^9.0.0",
+    "picomatch": "4.0.3"
   }
 }
