--- a/functions/package.json
+++ b/functions/package.json
@@ -4,6 +4,7 @@
     "node": "20"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.5",
     "firebase-admin": "^12.7.0",
