--- a/firebase.json
+++ b/firebase.json
@@ -11,18 +11,24 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "predeploy": [
+      "npm run build"
     ]
   },
   "functions": [
     {
       "source": "functions",
       "codebase": "default",
-      "runtime": "nodejs20", 
+      "runtime": "nodejs20",
       "ignore": [
         "node_modules",
         ".git",
         "firebase-debug.log",
         "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" install"
       ]
     }
   ]
